--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,5 @@
 name = "game-of-powder"
 version = "0.1.0"
 authors = ["CrazedProgrammer <crazedprogrammer@gmail.com>"]
+[dependencies]
+sdl2 = "0.30.0"
